Fixed slider reactivity

--- a/Cherrisma/Res/Main.yaml
+++ b/Cherrisma/Res/Main.yaml
@@ -1,7 +1,10 @@
 Node: MainScene::MainScene
 children:
     - Node: LineEdit::LineEdit
-      Position: [300, 300]
+      AnchorPreset: TopCenter
+      MarginTop: 32
+      HAlignment: Left
+
     - Node: HSlider::Slider
       AnchorPreset: BottomCenter
       Size: [300, 8]
