--- a/Cherrisma/Res/Main.yaml
+++ b/Cherrisma/Res/Main.yaml
@@ -4,6 +4,7 @@ children:
       AnchorPreset: TopCenter
       MarginTop: 32
       HAlignment: Left
+      #RelativeWidth: 0.5
 
     - Node: HSlider::Slider
       AnchorPreset: BottomCenter
