--- a/Cherrisma/Res/Main.yaml
+++ b/Cherrisma/Res/Main.yaml
@@ -3,6 +3,7 @@ children:
     - Node: LineEdit::LineEdit
       AnchorPreset: TopCenter
       MarginTop: 32
+      RelativeWidth: 0.5
 
     - Node: HBoxContainer::ButtonContainer
       AnchorPreset: BottomCenter
@@ -12,16 +13,23 @@ children:
       children:
         - Node: Button::ButtonPrevious
           Text: "<"
-          Size: [40, 26]
-          HAlignment: Left # Ensures button's origin is (0,y)
-        - Node: Button::ButtonPlayPause
+          Size: [32, 32]
+          HAlignment: Right # Ensures button's origin is (0,y)
+          FocusNeighborRight: ../PlayPauseButton
+          Styles:
+            Roundness: 1
+        - Node: Button::PlayPauseButton
           Text: "||"
-          Size: [40, 26]
-          HAlignment: Left # Ensures button's origin is (0,y)
+          Size: [32, 32]
+          HAlignment: Right # Ensures button's origin is (0,y)
+          Styles:
+            Roundness: 1
         - Node: Button::ButtonNext
           Text: ">"
-          Size: [40, 26]
-          HAlignment: Left # Ensures button's origin is (0,y)
+          Size: [32, 32]
+          HAlignment: Right # Ensures button's origin is (0,y)
+          Styles:
+            Roundness: 1
 
     - Node: HSlider::Slider
       AnchorPreset: BottomCenter
